# Fantasy-Football

./: .gitignore  client.py  data_test.ipynb  process_all.py  process_matches.py  process_point_breakdowns.py  process_transfers.py  pyproject.toml  write_csv.py  write_excel.py  write_file.py  write_google.py
