[project]
name = "fantasy-football"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.145.0",
    "google-auth>=2.34.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
